# clinicalrag

./: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
clinicalrag/: __init__.py  app.py  chunk.py  cli.py  embed.py  guard.py  rag.py  rerank.py  vector.py
tests/: test_app.py  test_chunk.py  test_pipeline.py  test_v4_rerank.py
