[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinicalrag"
version = "0.1.0"
description = "LLM-powered RAG pipeline over biomedical literature with citation-grounded answers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]
openai = ["openai>=1.54"]
faiss = ["faiss-cpu>=1.7"]

[project.scripts]
clinicalrag = "clinicalrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clinicalrag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
